BE -> almost complete

--- a/Server/.env
+++ b/Server/.env
@@ -4,4 +4,4 @@ JWT_SECRET = asduAGhFf;
 NODE_ENV = 'development'
 SMTP_USER="90ffb5001@smtp-brevo.com"
 SMTP_PASS="LgNb8zhFrw4Sx7vq"
-SENDER_EMAIL="nitesh.kumar_cs22@gla.ac.in"
+SENDER_EMAIL=nitesh.kumar_cs22@gla.ac.in
